--- a/css/style.css
+++ b/css/style.css
@@ -6,27 +6,114 @@ body{
     background-color: #BAEEAD;
 }
 /* encabezado (HEADER) */
+
 .navbar-brand{
     color: #010101;
     font-family: Arial, Helvetica, sans-serif;
-    text-decoration: underline;
+    background-color: #BAEEAD;
+    padding: 5px;
+    border-style: inherit;
+    border-radius: 10px;
+    margin-left: 10px;
+    margin-bottom: 3px;
 }
-.container-fluid img {
-    width: 5%;
+.escudo-villaheader{
+    width: 7%;
+    margin-bottom: 3px;
+}
+.crazy{
+    width: 12%;
+    margin-bottom: 3px;
+}
+.navbar-toggler{
+    margin-bottom: 3px;
 }
 header nav div {
     background-color: #5BBC62;
+   
 
 }
 .navbar{
     padding: 0%;
+    border-bottom: #010101 solid 1px;
+}
+.nav-link{
+    color: #010101;
+    
+}
+.container-fluid{
+ align-items: end !important;
+}
+.d-flex{
+    margin-bottom: 10px;
+}
+/*Acá comienza el main*/
+main h1 {
+    font-style: oblique;
+    font-size: 25px;
+    color: #010101;
+    border-bottom: #010101
+    solid 1px;
+    border-top: #010101 solid 1px;
+    margin-top: 20px;
+    padding: 10px;
+    text-decoration: underline;
+    background-color: #5BBC62;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.cartaseccion {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 20px;
+    gap: 20px;
+   
+}
+
+.carta {
+    background-color: #5BBC62;
+    border: 3px solid #ddd;
+    border-radius: 8px;
+    width: 300px;
+    text-align: center;
+    transition: transform 0.4s;
+}
+
+.carta:hover {
+    transform: translateY(-10px);
+   
+}
+
+.carta-img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+}
+
+.carta-cuerpo {
+    padding: 20px;
+}
+
+
+
+
+
+.carta-link {
+    color: #007bff;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.carta-link:hover {
+    text-decoration: underline;
 }
 /* Aca comienza el footer*/
 .footer {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr; /* Divide el footer en tres columnas de tamaño igual */
-    gap: 20px; /* Espacio entre las columnas */
-    padding: 20px; /* Ajuste el padding según sea necesario */
+    grid-template-columns: 1fr 1fr 1fr; 
+    gap: 20px;
+    padding: 20px; 
     background-color:  #5BBC62;
     
 }
