--- a/css/style.css
+++ b/css/style.css
@@ -3,19 +3,21 @@
     margin: 0%;
 }
 body{
-    background-color: #BAEEAD;
+    background-color: #ffffffee;
 }
 /* encabezado (HEADER) */
 
 .navbar-brand{
     color: #010101;
-    font-family: Arial, Helvetica, sans-serif;
+    font-style: italic;
     background-color: #BAEEAD;
-    padding: 5px;
+    padding: 8px;
     border-style: inherit;
-    border-radius: 10px;
-    margin-left: 10px;
+    border-radius: 6px;
+    margin-left: 12px;
     margin-bottom: 3px;
+    
+    
 }
 .escudo-villaheader{
     width: 7%;
@@ -41,26 +43,29 @@ header nav div {
     color: #010101;
     
 }
+#navbarTogglerDemo02 a{
+    text-decoration: underline;
+}
 .container-fluid{
  align-items: end !important;
 }
 .d-flex{
     margin-bottom: 10px;
 }
-/*Acá comienza el main*/
+/*Acá comienza el main del index*/
 main h1 {
     font-style: oblique;
-    font-size: 25px;
+    font-size: 29px;
     color: #010101;
-    border-bottom: #010101
-    solid 1px;
-    border-top: #010101 solid 1px;
-    margin-top: 20px;
-    padding: 10px;
+    margin-top:2px;
+    
     text-decoration: underline;
-    background-color: #5BBC62;
-    text-align: center;
+   
+    background-color: #ffffff;
     font-family: Arial, Helvetica, sans-serif;
+}
+.titulo-index{
+    margin: 30px;
 }
 .cartaseccion {
     display: flex;
@@ -70,7 +75,6 @@ main h1 {
     gap: 20px;
    
 }
-
 .carta {
     background-color: #5BBC62;
     border: 3px solid #ddd;
@@ -90,12 +94,34 @@ main h1 {
     height: 200px;
     object-fit: cover;
 }
-
+.carta-img6 {
+    width: 100%;
+    height: 450px;
+    object-fit: cover;
+}
+.carta-img2 {
+    width: 100%;
+    height: 220px;
+    object-fit: cover;
+}
+.carta-img5 {
+    width: 100%;
+    height: 350px;
+    object-fit: cover;
+}
+.carta-cuerpo h3 p span {
+    color: #010101;
+} 
 .carta-cuerpo {
     padding: 20px;
 }
-
-
+.carousel {
+    margin-top: 1px;
+}
+.d-block{
+    height: 180px;
+    object-fit: cover;
+}
 
 
 
@@ -130,4 +156,121 @@ footer div a {
     text-decoration: none;
     color: #010101;
     font-size: 12px;
+}
+/*Aqui comienza el main de la ventana TIENDA*/
+/* styles.css */
+
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #ffffff;
+}
+.Titulo-principal-tienda{
+    margin-top: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
+    font-style: normal;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 25px;
+    text-decoration: none;
+    border-bottom: #000000 solid 1px;
+    font-weight: inherit;
+}
+.descripcion-ropa{
+    margin-left: 20px;
+    margin-right: 20px;
+   font-family: Arial, Helvetica, sans-serif;
+   
+}
+
+.producto-grid {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 20px;
+    margin: 60px;
+    
+}
+.titulo-secciones{
+    padding: 10px;
+    margin-top: 40px;
+    font-family: Arial, Helvetica, sans-serif;
+    
+    font-style: oblique;
+    border-top: #5BBC62
+    solid 1px;
+    border-bottom: #5BBC62
+    solid 1px;
+    text-align: center;
+    
+}
+.producto{
+    background-color: #ffffff;
+    border: 1px solid #BAEEAD;
+    border-radius: 10px;
+    margin: 10px;
+    height: 100%;
+    text-align: center;
+    padding-left: 20px;
+    padding-right: 20px;
+
+}
+
+.producto-img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    
+}
+.producto-img2 {
+    width: 100%;
+    height: 200px;
+    object-fit: contain;
+    margin-top: 10px;
+    
+}
+.Prenda {
+    padding: 10px;
+}
+
+.producto-titulo {
+    font-size: 18px;
+    margin: 0 0 10px;
+    color: #000000;
+    font-family: 'Times New Roman', Times, serif
+    ;
+}
+
+
+
+.precio {
+    font-size: 18px;
+    color: #ff3a18;
+    margin-bottom: 10px;
+    font-weight: bold;
+}
+
+.boton-compra {
+
+    padding: 10px 20px;
+    background-color: #5BBC62;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 5px;
+    font-weight: bold;
+}
+
+.boton-compra:hover {
+    background-color: #208f04;
+    transition-duration: 1s;
+}
+.demanda-producto p{
+    margin-left: 20px;
+    margin-right: 20px;
+   font-family: Arial, Helvetica, sans-serif;
+   font-size: 12px;  
+}
+.demanda-producto p span {
+    background-color: #BAEEAD;
+    font-weight: bolder;
 }
