--- a/css/style.css
+++ b/css/style.css
@@ -71,12 +71,13 @@ main h1 {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    padding: 20px;
-    gap: 20px;
+    padding: 50px;
+    gap: 60px;
+    
    
 }
 .carta {
-    background-color: #5BBC62;
+    background-color: #BAEEAD;
     border: 3px solid #ddd;
     border-radius: 8px;
     width: 300px;
@@ -126,9 +127,12 @@ main h1 {
 
 
 .carta-link {
-    color: #007bff;
+    color: #ffffff;
     text-decoration: none;
     font-weight: bold;
+    border-radius: 5px;
+    padding: 8px;
+    background-color: #208f04;
 }
 
 .carta-link:hover {
@@ -158,7 +162,6 @@ footer div a {
     font-size: 12px;
 }
 /*Aqui comienza el main de la ventana TIENDA*/
-/* styles.css */
 
 body {
     font-family: Arial, sans-serif;
@@ -183,14 +186,15 @@ body {
    font-family: Arial, Helvetica, sans-serif;
    
 }
-
-.producto-grid {
+.grid-container-tienda {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 20px;
-    margin: 60px;
     
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: auto auto auto auto;
+    gap: 20px;
+    padding: 20px;
 }
+
 .titulo-secciones{
     padding: 10px;
     margin-top: 40px;
@@ -219,7 +223,7 @@ body {
 .producto-img {
     width: 100%;
     height: 200px;
-    object-fit: cover;
+    object-fit: contain;
     
 }
 .producto-img2 {
@@ -273,4 +277,116 @@ body {
 .demanda-producto p span {
     background-color: #BAEEAD;
     font-weight: bolder;
+}
+/*Fin del main- TIENDA*/
+
+/*Main- actividades.html*/
+#actividades {
+    padding: 20px;
+    background-color: #f9f9f9;
+    text-align: center;
+}
+#actividades h2 {
+    color: black;
+    border-bottom: #5BBC62 solid 1px;
+    font-style: italic;
+}
+.actividad h3 {
+    color: black;
+}
+.actividad p {
+    margin-top: 10px;
+    font-size: 15px;
+}
+
+.actividad {
+    background-color: #fff;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    padding: 15px;
+    margin-bottom: 10px;
+}
+
+h3 {
+    margin-top: 0;
+}
+
+.mas-informacion-act {
+    background-color: #5BBC62;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 15px;
+    cursor: pointer;
+}
+
+.mas-informacion-act:hover {
+    background-color: #208f04;
+}
+.actividad img {
+        max-width: 100%;
+        height: auto;
+    }
+#profesores {
+    padding: 20px;
+    background-color: #f9f9f9;
+}
+
+h2 {
+    text-align: center;
+    color: #333;
+    margin-bottom: 20px;
+}
+
+.profes-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+}
+
+.profe {
+    background-color: #fff;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    padding: 15px;
+    text-align: center;
+    width: 200px;
+    
+}
+
+.profe img {
+    width: 100%;
+    height: auto;
+    border-radius: 50%;
+    border: 3px solid #5BBC62;
+    margin-bottom: 10px;
+}
+
+
+
+
+
+
+
+
+
+
+/*media para el html TIENDA*/
+@media (max-width: 1024px) {
+    .grid-container-tienda {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+
+@media (max-width: 768px) {
+    .grid-container-tienda{
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media (max-width: 480px) {
+    .grid-container-tienda {
+        grid-template-columns: 1fr;
+    }
 }
