--- a/css/style.css
+++ b/css/style.css
@@ -1,483 +1,465 @@
-*{
-    padding: 0%;
-    margin: 0%;
+@charset "UTF-8";
+/*Aca estan las secciones del layout*/
+.navbar-brand {
+  color: #010101;
+  font-style: italic;
+  background-color: #BAEEAD;
+  padding: 8px;
+  border-style: inherit;
+  border-radius: 6px;
+  margin-left: 12px;
+  margin-bottom: 3px;
 }
-body{
-    background-color: #ffffffee;
-}
-/* encabezado (HEADER) */
 
-.navbar-brand{
-    color: #010101;
-    font-style: italic;
-    background-color: #BAEEAD;
-    padding: 8px;
-    border-style: inherit;
-    border-radius: 6px;
-    margin-left: 12px;
-    margin-bottom: 3px;
-    
-    
+.escudo-villaheader {
+  width: 7%;
+  margin-bottom: 3px;
 }
-.escudo-villaheader{
-    width: 7%;
-    margin-bottom: 3px;
+
+.crazy {
+  width: 12%;
+  margin-bottom: 3px;
 }
-.crazy{
-    width: 12%;
-    margin-bottom: 3px;
+
+.navbar-toggler {
+  margin-bottom: 3px;
 }
-.navbar-toggler{
-    margin-bottom: 3px;
-}
+
 header nav div {
-    background-color: #5BBC62;
-   
+  background-color: #5BBC62;
+}
 
+.navbar {
+  padding: 0%;
+  border-bottom: #010101 solid 1px;
 }
-.navbar{
-    padding: 0%;
-    border-bottom: #010101 solid 1px;
+
+.nav-link {
+  color: #010101;
 }
-.nav-link{
-    color: #010101;
-    
+
+#navbarTogglerDemo02 a {
+  text-decoration: underline;
 }
-#navbarTogglerDemo02 a{
-    text-decoration: underline;
+
+.container-fluid {
+  align-items: end !important;
 }
-.container-fluid{
- align-items: end !important;
+
+.d-flex {
+  margin-bottom: 10px;
 }
-.d-flex{
-    margin-bottom: 10px;
-}
-/*Acá comienza el main del index*/
+
 main h1 {
-    font-style: oblique;
-    font-size: 29px;
-    color: #010101;
-    margin-top:2px;
-    
-    text-decoration: underline;
-   
-    background-color: #ffffff;
-    font-family: Arial, Helvetica, sans-serif;
-}
-.titulo-index{
-    margin: 30px;
-}
-.cartaseccion {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    padding: 50px;
-    gap: 60px;
-    
-   
-}
-.carta {
-    background-color: #BAEEAD;
-    border: 3px solid #ddd;
-    border-radius: 8px;
-    width: 300px;
-    text-align: center;
-    transition: transform 0.4s;
+  font-style: oblique;
+  font-size: 29px;
+  color: #010101;
+  margin-top: 2px;
+  text-decoration: underline;
+  background-color: #ffffff;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-.carta:hover {
-    transform: translateY(-10px);
-   
+.titulo-index {
+  margin: 30px;
 }
 
-.carta-img {
-    width: 100%;
-    height: 200px;
-    object-fit: cover;
-}
-.carta-img6 {
-    width: 100%;
-    height: 450px;
-    object-fit: cover;
-}
-.carta-img2 {
-    width: 100%;
-    height: 220px;
-    object-fit: cover;
-}
-.carta-img5 {
-    width: 100%;
-    height: 350px;
-    object-fit: cover;
-}
-.carta-cuerpo h3 p span {
-    color: #010101;
-} 
-.carta-cuerpo {
-    padding: 20px;
-}
 .carousel {
-    margin-top: 1px;
-}
-.d-block{
-    height: 180px;
-    object-fit: cover;
+  margin-top: 1px;
 }
 
-
-
-.carta-link {
-    color: #ffffff;
-    text-decoration: none;
-    font-weight: bold;
-    border-radius: 5px;
-    padding: 8px;
-    background-color: #208f04;
+.d-block {
+  height: 180px;
+  object-fit: cover;
 }
 
-.carta-link:hover {
-    text-decoration: underline;
-}
-/* Aca comienza el footer*/
 .footer {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr; 
-    gap: 20px;
-    padding: 20px; 
-    background-color:  #5BBC62;
-    
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 20px;
+  padding: 20px;
+  background-color: #5BBC62;
+}
+
+footer div {
+  display: flex;
+  align-items: center;
 }
 footer div img {
-    height: 25px;
-}
-.footer div {
-    display: flex;
-    align-items: center;
-    
+  height: 25px;
 }
 footer div a {
-    font-family: Arial, Helvetica, sans-serif;
-    text-decoration: none;
-    color: #010101;
-    font-size: 12px;
+  font-family: Arial, Helvetica, sans-serif;
+  text-decoration: none;
+  color: #010101;
+  font-size: 12px;
 }
-/*Aqui comienza el main de la ventana TIENDA*/
 
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #ffffff;
+.Titulo-principal-tienda {
+  margin-top: 20px;
+  margin-left: 20px;
+  margin-right: 20px;
+  font-style: normal;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 25px;
+  text-decoration: none;
+  border-bottom: #000000 solid 1px;
+  font-weight: inherit;
 }
-.Titulo-principal-tienda{
-    margin-top: 20px;
-    margin-left: 20px;
-    margin-right: 20px;
-    font-style: normal;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 25px;
-    text-decoration: none;
-    border-bottom: #000000 solid 1px;
-    font-weight: inherit;
+
+.descripcion-ropa {
+  margin-left: 20px;
+  margin-right: 20px;
+  font-family: Arial, Helvetica, sans-serif;
 }
-.descripcion-ropa{
-    margin-left: 20px;
-    margin-right: 20px;
-   font-family: Arial, Helvetica, sans-serif;
-   
-}
+
 .grid-container-tienda {
-    display: grid;
-    
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: auto auto auto auto;
-    gap: 20px;
-    padding: 20px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: auto auto auto auto;
+  gap: 20px;
+  padding: 20px;
 }
 
-.titulo-secciones{
-    padding: 10px;
-    margin-top: 40px;
-    font-family: Arial, Helvetica, sans-serif;
-    
-    font-style: oblique;
-    border-top: #5BBC62
-    solid 1px;
-    border-bottom: #5BBC62
-    solid 1px;
-    text-align: center;
-    
-}
-.producto{
-    background-color: #ffffff;
-    border: 1px solid #BAEEAD;
-    border-radius: 10px;
-    margin: 10px;
-    height: 100%;
-    text-align: center;
-    padding-left: 20px;
-    padding-right: 20px;
-
+.titulo-secciones {
+  padding: 10px;
+  margin-top: 40px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-style: oblique;
+  border-top: #5BBC62 solid 1px;
+  border-bottom: #5BBC62 solid 1px;
+  text-align: center;
 }
 
-.producto-img {
-    width: 100%;
-    height: 200px;
-    object-fit: contain;
-    
-}
-.producto-img2 {
-    width: 100%;
-    height: 200px;
-    object-fit: contain;
-    margin-top: 10px;
-    
-}
-.Prenda {
-    padding: 10px;
-}
-
-.producto-titulo {
-    font-size: 18px;
-    margin: 0 0 10px;
-    color: #000000;
-    font-family: 'Times New Roman', Times, serif
-    ;
-}
-
-
-
-.precio {
-    font-size: 18px;
-    color: #ff3a18;
-    margin-bottom: 10px;
-    font-weight: bold;
-}
-
-.boton-compra {
-
-    padding: 10px 20px;
-    background-color: #5BBC62;
-    color: #fff;
-    text-decoration: none;
-    border-radius: 5px;
-    font-weight: bold;
-}
-
-.boton-compra:hover {
-    background-color: #208f04;
-    transition-duration: 1s;
-}
-.demanda-producto p{
-    margin-left: 20px;
-    margin-right: 20px;
-   font-family: Arial, Helvetica, sans-serif;
-   font-size: 12px;  
+.demanda-producto p {
+  margin-left: 20px;
+  margin-right: 20px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 12px;
 }
 .demanda-producto p span {
-    background-color: #BAEEAD;
-    font-weight: bolder;
+  background-color: #BAEEAD;
+  font-weight: bolder;
 }
-/*Fin del main- TIENDA*/
 
-/*Main- actividades.html*/
 #actividades {
-    padding: 20px;
-    background-color: #f9f9f9;
-    text-align: center;
+  padding: 20px;
+  background-color: #f9f9f9;
+  text-align: center;
 }
 #actividades h2 {
-    color: black;
-    border-bottom: #5BBC62 solid 1px;
-    font-style: italic;
+  color: black;
+  border-bottom: #5BBC62 solid 1px;
+  font-style: italic;
 }
-.actividad h3 {
-    color: black;
+#actividades .actividad {
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  padding: 15px;
+  margin-bottom: 10px;
 }
-.actividad p {
-    margin-top: 10px;
-    font-size: 15px;
+#actividades .actividad h3 {
+  color: black;
+}
+#actividades .actividad p {
+  margin-top: 10px;
+  font-size: 15px;
+}
+#actividades .actividad img {
+  max-width: 100%;
+  height: auto;
+}
+#actividades .mas-informacion-act {
+  background-color: #5BBC62;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 15px;
+  cursor: pointer;
+}
+#actividades .mas-informacion-act:hover {
+  background-color: #208f04;
 }
 
-.actividad {
-    background-color: #fff;
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    padding: 15px;
-    margin-bottom: 10px;
+#profesores {
+  padding: 20px;
+  background-color: #f9f9f9;
+}
+#profesores h2 {
+  text-align: center;
+  color: #333;
+  margin-bottom: 20px;
+}
+#profesores .profes-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+}
+#profesores .profe {
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  padding: 15px;
+  text-align: center;
+  width: 200px;
+}
+#profesores .profe img {
+  width: 100%;
+  height: auto;
+  border-radius: 50%;
+  border: 3px solid #5BBC62;
+  margin-bottom: 10px;
 }
 
 h3 {
-    margin-top: 0;
+  margin-top: 0;
 }
 
-.mas-informacion-act {
-    background-color: #5BBC62;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    padding: 10px 15px;
-    cursor: pointer;
-}
-
-.mas-informacion-act:hover {
-    background-color: #208f04;
-}
-.actividad img {
-        max-width: 100%;
-        height: auto;
-    }
-#profesores {
-    padding: 20px;
-    background-color: #f9f9f9;
-}
-
-h2 {
-    text-align: center;
-    color: #333;
-    margin-bottom: 20px;
-}
-
-.profes-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 20px;
-}
-
-.profe {
-    background-color: #fff;
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    padding: 15px;
-    text-align: center;
-    width: 200px;
-    
-}
-
-.profe img {
-    width: 100%;
-    height: auto;
-    border-radius: 50%;
-    border: 3px solid #5BBC62;
-    margin-bottom: 10px;
-}
-/*FIN.....Main- actividades.html*/
-
-/*Main- historia.html*/
 .socio-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 20px;
-    max-width: 100%;
-
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+  max-width: 100%;
 }
+
 .socio {
-    background-color: #fff;
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    padding: 15px;
-    text-align: center;
-    width: 200px;
-    
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  padding: 15px;
+  text-align: center;
+  width: 200px;
 }
 .socio img {
-    width: 100%;
-    height: auto;
-    border-radius: 50%;
-    border: 3px solid #5BBC62;
-    margin-bottom: 10px;
+  width: 100%;
+  height: auto;
+  border-radius: 50%;
+  border: 3px solid #5BBC62;
+  margin-bottom: 10px;
 }
-.socio-titulo{
-    margin-top: 18px;
-    border-bottom: #5BBC62
-    solid 1px;  
+
+.socio-titulo {
+  margin-top: 18px;
+  border-bottom: #5BBC62 solid 1px;
 }
+
 .portada-historia {
-    width: 100%;
-    object-fit: contain
+  width: 100%;
+  object-fit: contain;
 }
 
 .historia {
-    background-color: #BAEEAD;
-    border: 3px solid #ddd;
-    border-radius: 8px;
-    width: 100%;
-    text-align: center;
+  background-color: #BAEEAD;
+  border: 3px solid #ddd;
+  border-radius: 8px;
+  width: 100%;
+  text-align: center;
 }
-.historia-cuerpo {
-    padding: 10px;
-}
-.titulo-historia{
-    background-color: #5BBC62;
-    margin-top: 20px;
-    color: #ffffff;
-    font-size: 40px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-weight: bold;
-    font-style: italic;
-}
-/*aqui termina main historia.html*/
 
-/*aqui empieza MAIN de Contacto.html*/
-.titulo-contacto{
-    margin-top: 20px;
-    border-bottom: #5BBC62 solid 1px;
-    font-size: 40px;
+.historia-cuerpo {
+  padding: 10px;
 }
-.contacto-redes img{
-width: 41px;
+
+.titulo-historia {
+  background-color: #5BBC62;
+  margin-top: 20px;
+  color: #ffffff;
+  font-size: 40px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-weight: bold;
+  font-style: italic;
 }
-.contacto-redes{
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
+
+.titulo-contacto {
+  margin-top: 20px;
+  border-bottom: #5BBC62 solid 1px;
+  font-size: 40px;
+}
+
+.contacto-redes {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
 }
 .contacto-redes a {
-    
-    color: #008507;
+  color: #008507;
 }
-.map{
-    display: flex;
-    justify-content: center;
-    margin-bottom: 20px;
-}
-.titulo-mapa{
-    margin-top: 40px;
-    font-weight: bolder;
-    border-style: dashed;
-    border-radius: 10px;
-    border-color: #5BBC62;
-}
-@media (max-width: 480px) {
-    .contacto-redes{
-        display: block;
-        text-align: center;
-    }
-}
-@media (max-width: 768px) {
-    .contacto-redes{
-        display: block;
-        text-align: center;
-    }
+.contacto-redes img {
+  width: 41px;
 }
 
-/*media para el html TIENDA*/
+.map {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+  width: 100%;
+  height: 400px;
+}
+
+.titulo-mapa {
+  margin-top: 40px;
+  font-weight: bolder;
+  border-style: dashed;
+  border-radius: 10px;
+  border-color: #5BBC62;
+}
+
+/*reset o base del proyecto*/
+* {
+  padding: 0%;
+  margin: 0%;
+}
+
+body {
+  background-color: rgba(255, 255, 255, 0.9333333333);
+}
+
+/*mediaqueries importantes*/
 @media (max-width: 1024px) {
-    .grid-container-tienda {
-        grid-template-columns: 1fr 1fr 1fr;
-    }
+  .grid-container-tienda {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
 }
-
 @media (max-width: 768px) {
-    .grid-container-tienda{
-        grid-template-columns: 1fr 1fr;
-    }
+  .grid-container-tienda {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media (max-width: 480px) {
+  .grid-container-tienda {
+    grid-template-columns: 1fr;
+  }
+}
+@media (max-width: 480px) {
+  .contacto-redes {
+    display: block;
+    text-align: center;
+  }
+}
+@media (max-width: 768px) {
+  .contacto-redes {
+    display: block;
+    text-align: center;
+  }
+}
+/*Acà los componentes*/
+/*Boton de compra tienda*/
+.boton-compra {
+  padding: 10px 20px;
+  background-color: #5BBC62;
+  color: #fff;
+  text-decoration: none;
+  border-radius: 5px;
+  font-weight: bold;
+}
+.boton-compra:hover {
+  background-color: #208f04;
+  transition-duration: 1s;
 }
 
-@media (max-width: 480px) {
-    .grid-container-tienda {
-        grid-template-columns: 1fr;
-    }
+/* Aca las cartas del index*/
+.cartaseccion {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 50px;
+  gap: 60px;
 }
+
+.carta {
+  background-color: #BAEEAD;
+  border: 3px solid #ddd;
+  border-radius: 8px;
+  width: 300px;
+  text-align: center;
+  transition: transform 0.4s;
+}
+.carta:hover {
+  transform: translateY(-10px);
+}
+
+.carta-img, .producto .producto-img2 {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+}
+
+.carta-img6 {
+  width: 100%;
+  height: 450px;
+  object-fit: cover;
+}
+
+.carta-img2 {
+  width: 100%;
+  height: 220px;
+  object-fit: cover;
+}
+
+.carta-img5 {
+  width: 100%;
+  height: 350px;
+  object-fit: cover;
+}
+
+.carta-cuerpo {
+  padding: 20px;
+}
+.carta-cuerpo h3 p span {
+  color: #010101;
+}
+
+.carta-link {
+  color: #ffffff;
+  text-decoration: none;
+  font-weight: bold;
+  border-radius: 5px;
+  padding: 8px;
+  background-color: #208f04;
+}
+.carta-link:hover {
+  text-decoration: underline;
+}
+
+/* Aca las cartas de tienda*/
+.producto {
+  background-color: #ffffff;
+  border: 1px solid #BAEEAD;
+  border-radius: 10px;
+  margin: 10px;
+  height: 100%;
+  text-align: center;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+.producto .producto-img {
+  width: 100%;
+  height: 200px;
+  object-fit: contain;
+}
+.producto .producto-img2 {
+  margin-top: 10px;
+}
+
+.Prenda {
+  padding: 10px;
+}
+
+.producto-titulo {
+  font-size: 18px;
+  margin: 0 0 10px;
+  color: #000000;
+  font-family: "Times New Roman", Times, serif;
+}
+
+.precio {
+  font-size: 18px;
+  color: #ff3a18;
+  margin-bottom: 10px;
+  font-weight: bold;
+}
+
+/*# sourceMappingURL=style.css.map */
